--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,13 @@
 
  textarea {
   width: 100%;
-  height: 100px;
+  max-height: 100px;
   margin: 5px 5px 0 5px;
   border-radius: 10px;
   background-color: lightslategrey;
   color: black;
   font-size: 60px;
+  resize: none;
  }
 
  .btn-line-one,
