--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
  
- html{
+ body{
   background-color: darkgray;
   font-family: "Quicksand", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
  }
 
  h1 {
   text-align: center;
   text-transform: uppercase;
+  font-size: 80px;
+  font-weight: bold;
  }
  
  .container {
@@ -15,7 +23,7 @@
   border-radius: 10px;
   height: 580px;
   max-width: 400px;
-  margin: auto;
+ 
   background-color: black;
  }
 
