--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,7 @@
   border: none;
   border-radius: 10px;
   font-size: 30px;
- font-family: "Quicksand", sans-serif;
-
+  font-family: "Quicksand", sans-serif;
   font-weight: bold;
  }
 
@@ -75,10 +74,16 @@
   background-color: aqua;
  }
 
- .number {
+ .number,
+ .decimal {
   background-color: fuchsia;
  }
 
- .clear {
+ .equal {
+  background-color: gold;
+ }
+
+ .clear,
+ .backspace {
   background-color: orange;
  }
